--- a/citas.html
+++ b/citas.html
@@ -179,7 +179,7 @@
                 </div>
 
                 <li id="fila_2">
-                    <a target="_parent" href="https://sede.sepe.gob.es/citaprevia/solicitudCitaPrevia.do"><img width="60px" src="css/images/logo_sepe.png">
+                    <a target="_parent" href="https://sede.sepe.gob.es/portalSede/procedimientos-y-servicios/personas/proteccion-por-desempleo/cita-Previa.html"><img width="60px" src="css/images/logo_sepe.png">
                         <h6>Cita previa Servicio de empleo</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar empleo, prestaciones por desempleo, etc.. </p>
                     </a>
@@ -301,7 +301,13 @@
                     </a>
                     <A name="fila_19 " HREF="# " id="agregar-favoritos_19"></A>
                 </li>
-
+                <li id="fila_25">
+                    <a target="_parent" href="https://ssweb.seap.minhap.es/icpplus/citar?org=DGCP"><img width="60px " src="css/images/logo_gob_esp.png">
+                        <h6>Cita previa Clases Pasivas</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188); ">Información Jubilación de las clases pasivas</p>
+                    </a>
+                    <A name="fila_25" HREF="# " id="agregar-favoritos_25"></A>
+                </li>
 
 
 
@@ -739,9 +745,29 @@
                     </a>
                     <A name="fila_23" HREF="#" id="agregar-favoritos_23"></A>
                 </li>
+                <li id="fila_24">
+                    <a target="_parent" href="https://sede.sepe.gob.es/portalSede/procedimientos-y-servicios.html"><img width="60px" src="css/images/logo_agencia.png">
+                        <h6>SEPE Servicio Estatal de Empleo</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar prestaciones, certificados, contratos laborales, etc..</p>
+                    </a>
+                    <A name="fila_24" HREF="#" id="agregar-favoritos_24"></A>
+                </li>
+                <li id="fila_26">
+                    <a target="_parent" href="https://www.portalclasespasivas.gob.es/sitios/clasespasivas/es-ES/SolicitudesProcedimientos/Paginas/SolicitudesProcedimientos.aspx"><img width="60px" src="css/images/logo_gob_esp.png">
+                        <h6>Trámites Clases Pasivas</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar prestaciones, pensiones, procedimientos reconocimientos, etc..</p>
+                    </a>
+                    <A name="fila_26" HREF="#" id="agregar-favoritos_26"></A>
+                </li>
+                <li id="fila_27">
+                    <a target="_parent" href="https://www.sedecatastro.gob.es/"><img width="60px" src="css/images/logo_sec.png">
+                        <h6>Trámites Catastro</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para consultar inmuebles, datos catastrales, inscripcion inmuebles, segregación, etc.. .</p>
+                    </a>
+                    <A name="fila_27" HREF="#" id="agregar-favoritos_27"></A>
+                </li>
 
-
-
+                https://www.sedecatastro.gob.es/
             </ul>
             <!--FIN LISTA TRAMITES-->
         </div>
