--- a/citas.html
+++ b/citas.html
@@ -294,13 +294,13 @@
                     </a>
                     <A name="fila_9" HREF="#" id="agregar-favoritos_9"></A>
                 </li>
-                <li id="fila_19">
+                <!--li id="fila_19">
                     <a target="_parent" href="ayuntamiento_comunidades.html"><img width="60px " src="css/images/sele_electronica.png">
                         <h6>Todos los ayuntamientos de España</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188); ">Busque aquí la sede electronica del ayuntamiento de su localidad.</p>
                     </a>
                     <A name="fila_19 " HREF="# " id="agregar-favoritos_19"></A>
-                </li>
+                </li-->
                 <li id="fila_25">
                     <a target="_parent" href="https://ssweb.seap.minhap.es/icpplus/citar?org=DGCP"><img width="60px " src="css/images/logo_gob_esp.png">
                         <h6>Cita previa Clases Pasivas</h6>
