--- a/citas.html
+++ b/citas.html
@@ -308,6 +308,13 @@
                     </a>
                     <A name="fila_25" HREF="# " id="agregar-favoritos_25"></A>
                 </li>
+                <li id="fila_26">
+                    <a target="_parent" href="https://sedeapl.dgt.gob.es:7443/WEB_IWPS5_INET/jsp/sincertificado/index.jspx"><img width="60px " src="css/images/logo_dgt.jpg">
+                        <h6>Pago de Multas DGT</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188); ">Pago de multas de Tráfico, circulación</p>
+                    </a>
+                    <A name="fila_26" HREF="# " id="agregar-favoritos_26"></A>
+                </li>
 
 
 
