--- a/citas.html
+++ b/citas.html
@@ -65,10 +65,18 @@
 
             <!--INICIO LISTA CITAS-->
             <ul id="listadecitas" data-role="listview" data-filter="true" data-input="#myFilter" data-split-icon="star" data-theme="a" data-split-theme="b" data-inset="true">
+                <li id="fila_240">
+                    <a target="_parent" href="https://autocitavacuna.sanidadmadrid.org/ohcitacovid/#/"><img width="60px" src="css/images/logo_salud.png">
+                        <h6>Autocita Vacunación Madrid </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Madrid</p>
+                    </a>
+                    <A name="fila_240" HREF="#" id="agregar-favoritos_240"></A>
+                </li>
                 <div id="contenedor_10" data-role="collapsible" data-mini="true">
                     <h6>Cita Sanitaria (Todas las Comunidades )</h6>
                     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra, Especialistas </p>
                     <ul id="listadecitasanitaria" data-role="listview" data-filter="true" data-input="#myFilter" data-inset="true" data-split-icon="star" data-theme="a" data-split-theme="b" data-inset="true">
+
                         <li id="fila_101">
                             <a target="_parent" href="https://www.saludinforma.es/portalsi/web/salud/tramites-gestiones/cita-previa"><img width="60px" width="60px" src="css/images/logo_aragon.jpg">
                                 <h6>Cita Sanitaria en Aragon </h6>
@@ -322,6 +330,7 @@
                     </a>
                     <a HREF="#" name="fila_1" id="agregar-favoritos_1"></A>
                 </li>
+
                 <div data-mini="true" data-role="collapsible" id="contenedor_20">
 
                     <h6><img width="60px" width="60px" src="css/images/logo_ss.png">Trámites online acceso SMS</h6>
@@ -330,6 +339,7 @@
 
 
                     <ul id="listadetramitesms" data-role="listview" data-filter="true" data-input="#myFilter" data-inset="true" data-split-icon="star" data-theme="a" data-split-theme="b" data-inset="true">
+
 
 
                         <li id="fila_201">
@@ -768,7 +778,7 @@
                 <li id="fila_29">
                     <a target="_parent" href="https://administracion.gob.es/pagFront/tramites/fichaTramite.htm?idTramiteSeleccionado=3541&idMateria=&idBoletin=3#.YHF4y-gzZPY"><img width="60px " src="css/images/logo_gob_esp.png">
                         <h6>Pago de Impuestos Municipales</h6>
-                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188); ">Impuestos, tasas y precios públicos,Multas de circulación, Sanciones administrativas.</p>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188); ">Impuestos, tasas, multas de circulación, sanciones administrativas.</p>
                     </a>
                     <A name="fila_29" HREF="# " id="agregar-favoritos_29"></A>
                 </li>
