--- a/comunidad_1.html
+++ b/comunidad_1.html
@@ -1,41 +1,3 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Firebase App is always required and must be first -->
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-app.js"></script>
-<!-- Add additional services that you want to use -->
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-messaging.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-functions.js"></script>
-<!-- Comment out (or don't include) services that you don't want to use -->
-<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-storage.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.js"></script>
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
-<script src="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth__es.js"></script>
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
-
-
-<script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-
-
-<link rel="stylesheet" href="themes/alertify.core.css" />
-<link rel="stylesheet" href="themes/alertify.default.css" id="toggleCSS" />
-
-
-<script src="lib/alertify.min.js"></script>
-
-<!--script type="text/javascript" src="data.json"></script-->
-
-
-<!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlkVvmzUIeVr_u2s1URIwq8P_GZ12QwoU"></script-->
-<meta name="fila_viewport" content="initial-scale=1.0, user-scalable=no" />
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
-<script src="js/jquery-1.11.3.min.js"></script>
-<script src="js/jquery.mobile-1.4.5.min.js"></script>
 <div class="xsb-ayuntamiento-item xsb-ayuntamiento-item-computed">
     <a href="\andalucia\sevilla\alanis">
         <div class="xsb-card xsb-ayuntamiento">
@@ -8228,7 +8190,7 @@
                 <div class="xsb-card-content">
                     <div class="xsb-card-content-wrapper">
                         <div class="xsb-entidad">
-                            <div class="xsb-entidad-imagen"><img src="https:\\www.todoslosayuntamientos.es\images\logos_ayuntamientos\logos_almeria\fiñana.png" alt="Escudo de Fiñana"></div>
+                            <div class="xsb-entidad-imagen"><img src="https:\\www.todoslosayuntamientos.es\images\logos_ayuntamientos\logos_almeria\finana.png" alt="Escudo de Fiñana"></div>
                             <div class="xsb-entidad-contenido">
                                 <p class="xsb_ayuntamiento-direccion"><span class="xsb-label">Direccion</span><span class="xsb-value">PLAZA DE LA CONSTITUCION, N\u00ba 1<br>04500 - Fiñana - (Almerea)</span>
                                 </p>
@@ -11576,7 +11538,7 @@
                 <div class="xsb-card-content">
                     <div class="xsb-card-content-wrapper">
                         <div class="xsb-entidad">
-                            <div class="xsb-entidad-imagen"><img src="https:\\www.todoslosayuntamientos.es\images\logos_ayuntamientos\logos_granada\Lentej\u00cd.png" alt="Escudo de Lentege"></div>
+                            <div class="xsb-entidad-imagen"><img src="https:\\www.todoslosayuntamientos.es\images\logos_ayuntamientos\logos_granada\Lentegi.png" alt="Escudo de Lentege"></div>
                             <div class="xsb-entidad-contenido">
                                 <p class="xsb_ayuntamiento-direccion"><span class="xsb-label">Direccion</span><span class="xsb-value">Plaza Granada, 16<br>18699 - Lentegi - (Granada)</span>
                                 </p>
