--- a/citas.html
+++ b/citas.html
@@ -72,6 +72,52 @@
                     </a>
                     <A name="fila_240" HREF="#" id="agregar-favoritos_240"></A>
                 </li>
+                <li id="fila_241">
+                    <a target="_parent" href="https://citavacunacovid.ibsalut.es/citavacunacion/cuestionario-reservar-cita;lang=es-ES"><img width="60px" src="css/images/logo_baleares.png">
+                        <h6>Autocita Vacunación Baleares </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Baleares</p>
+                    </a>
+                    <A name="fila_241" HREF="#" id="agregar-favoritos_241"></A>
+                </li>
+                <li id="fila_242">
+                    <a target="_parent" href="https://vacunacovid.catsalut.gencat.cat/inici?qtoken=a48b5f58-ee06-4171-ba4e-36943b09596d"><img width="60px" src="css/images/logo_cataluña.png">
+                        <h6>Autocita Vacunación Cataluña </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Cataluña</p>
+                    </a>
+                    <A name="fila_242" HREF="#" id="agregar-favoritos_242"></A>
+                </li>
+                <li id="fila_243">
+                    <a target="_parent" href="https://www.saludinforma.es/portalsi/web/salud/tramites-gestiones/cita-previa?acceso=covid"><img width="60px" src="css/images/logo_aragon.jpg">
+                        <h6>Autocita Vacunación Aragón </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Aragón</p>
+                    </a>
+                    <A name="fila_243" HREF="#" id="agregar-favoritos_243"></A>
+                </li>
+
+                <li id="fila_244">
+                    <a target="_parent" href="http://coronavirus.san.gva.es/es/web/vacunacion/inicio"><img width="60px" src="css/images/logo_valencia.png">
+                        <h6>Autocita Vacunación Valencia </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Valencia</p>
+                    </a>
+                    <A name="fila_244" HREF="#" id="agregar-favoritos_244"></A>
+                </li>
+                <li id="fila_245">
+                    <a target="_parent" href="https://www.scsalud.es/cita-vacuna"><img width="60px" src="css/images/logo_cantabria.png">
+                        <h6>Autocita Vacunación Cantabria </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Cantabria</p>
+                    </a>
+                    <A name="fila_245" HREF="#" id="agregar-favoritos_245"></A>
+                </li>
+                <li id="fila_246">
+                    <a target="_parent" href="https://www.scsalud.es/cita-vacuna"><img width="60px" src="css/images/logo_canarias.jpg">
+                        <h6>Autocita Vacunación Canarias </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Canarias</p>
+                    </a>
+                    <A name="fila_246" HREF="#" id="agregar-favoritos_246"></A>
+                </li>
+                https://www3.gobiernodecanarias.org/sanidad/scs/SolicitaVacunarte/
+
+
                 <div id="contenedor_10" data-role="collapsible" data-mini="true">
                     <h6>Cita Sanitaria (Todas las Comunidades )</h6>
                     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra, Especialistas </p>
