--- a/citas.html
+++ b/citas.html
@@ -115,6 +115,16 @@
                     </a>
                     <A name="fila_246" HREF="#" id="agregar-favoritos_246"></A>
                 </li>
+                <li id="fila_247">
+                    <a target="_parent" href="https://portalsalud.carm.es/portalsalud/principal/inicio#inicio"><img width="60px" src="css/images/logo_murcia.png">
+                        <h6>Autocita Vacunación Murcia </h6>
+                        <P style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para la vacunación COVID 19 en Murcia</p>
+                    </a>
+                    <A name="fila_247" HREF="#" id="agregar-favoritos_247"></A>
+                </li>
+
+
+
                 <div id="contenedor_10" data-role="collapsible" data-mini="true">
                     <h6>Cita Sanitaria (Todas las Comunidades )</h6>
                     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra, Especialistas </p>
